# mnml-db-dynamodb

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: app.rs  blit.rs  clipboard.rs  config.rs  dynamodb.rs  keys.rs  main.rs  ui.rs
